--- a/GameData/AxialAerospace/SimpleCargo/Changelog.cfg
+++ b/GameData/AxialAerospace/SimpleCargo/Changelog.cfg
@@ -1,47 +1,28 @@
-KERBALCHANGELOG //Required to have this name
+KERBALCHANGELOG
 {
 	showChangelog = True
-	modName = SimpleCargo
+	modName = DockingPortDescriptions
 	VERSION
 	{
-	version = 1.1 //Version number, numbers only with no spaces!
-	change = Fixed window scrolling //any changes in that version. There can be as many change fields as you want
-	change = Added shiny buttons
-	change = Removed bugs
+		version = 1.0.0.2 -  Near Future Construction
+		change = added :NEEDS to patches
+		change = now supports size4, linear1, linear2, spinal, and octo from Near Future Construction
+		change = rounded up the herd of missing colons (:) and put them where they belong
 	}
 	VERSION
 	{
-		version = 1.0
-		change = adoption for curation by zer0Kerbal
-		change = release for KSP 1.7.3
-		change = change = First release!
-		change = add tags to all parts
-		change = convert from .mbm/.tga/.png -> .dds
-		change = update .mu to .dds
-		change = move .mu and .dds to /Assets/
-		change = update part.cfg to reflect movement of assets
-		change = remove extrainious scale = 1
-		change = adjust part scaling / node locations
-		change = Moved cargobays from Utility to Payload
-		change = moved docking ports versions from Utility to Coupling
-		change = localizations
-		change = update ModuleAnimateGeneric
-		change = add (startEventGUIName, endEventGUIName, actionGUIName) (eventAvailableEditor, eventAvailableFlight, eventAvailableEVA) to ModuleAnimateGeneric
-		change = add explosionPotential
-		change = add ModuleToggleCrossfeed
-		change = partTypeName = Cargo bay to ModuleCargoBay
-		change = add TweakScale
-		change = adjust entryCost (5x cost)
-		change = adjust maxTemp from 2950 to 2400
-		change = add	heatConductivity (= 0.04)
-		change = adjust/add bulkheadProfiles
-		change = change cbopen to CBOpen
-		change = description - adjust/add
-		change = title - adjust
-		change = add (staged = False, stagingEnabled = False) to ModuleDockingNode
-		change = 
-		change = 
-		change = 
-		change = 
+		version = 1.0.0.1
+		change = >>-- Release --<<
+		change = >>-- SpaceDock --<<
+		change = >>-- CKAN --<<
+		change = >>-- Curseforge --<<
+		change = moved to KGEx/
+		change = Gender working
+		change = adjusted MM timing - needs one :FOR[] before :LAST[] will work, else crashes MM
+	}
+	VERSION
+	{
+		version = 1.0.0.0
+		change = >>-- creation by zer0Kerbal --<<
 	}
 }
