--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,13 +1,12 @@
-# settings.yml 1.0.9.2
-# CC BY-NC-ND 3.0 Unported
+# settings.yml 1.0.9.7
+# this file: CC BY-ND 4.0
 # zer0Kerbal
 # created 01 Jan 2022
-# updated 20 Apr 2022
+# updated 01 Oct 2022
 # These settings are synced to GitHub by https://probot.github.io/apps/settings/
 # See https://docs.github.com/en/rest/reference/repos#update-a-repository for all available settings.
 
 repository:
-  # The name of the repository. Changing this will rename the repository
   name: SimpleCargoSolutions
 
   # A short description of the repository that will show up on GitHub
@@ -18,42 +17,6 @@ repository:
 
   # A comma-separated list of topics to set on the repository
   topics: simple,cargo,bays,kerbal,kerbalspaceprogram,ksp,ksp-mods,ksp-parts,kerbal-space,kerbal-space-program,kerbal-mods,zedk,artwhaley
-
-  # Either `true` to make the repository private, or `false` to make it public.
-  private: false
-
-  # Either `true` to enable issues for this repository, `false` to disable them.
-  has_issues: true
-
-  # Either `true` to enable projects for this repository, or `false` to disable them.
-  # If projects are disabled for the organization, passing `true` will cause an API error.
-  has_projects: true
-
-  # Either `true` to enable the wiki for this repository, `false` to disable it.
-  has_wiki: false
-
-  # Either `true` to enable downloads for this repository, `false` to disable them.
-  has_downloads: true
-
-  # Updates the default branch for this repository.
-  default_branch: master
-
-  # Either `true` to allow squash-merging pull requests, or `false` to prevent
-  # squash-merging.
-  allow_squash_merge: true
-
-  # Either `true` to allow merging pull requests with a merge commit, or `false`
-  # to prevent merging pull requests with merge commits.
-  allow_merge_commit: true
-
-  # Either `true` to allow rebase-merging pull requests, or `false` to prevent
-  # rebase-merging.
-  allow_rebase_merge: true
-
-  # Either `true` to enable automatic deletion of branches on merge, or `false` to disable
-  delete_branch_on_merge: true
-
-  has_discussions: true
 
 # Labels: define labels for Issues and Pull Requests
 labels:
@@ -133,7 +96,11 @@ labels:
 
   - name: "issue: license"
     color: FBCA04
-    description: issue type
+    description: having to do with license/licensing
+
+  - name: "issue: image"
+    color: FBCA04
+    description: deals with images and imgbot
 
   - name: "issue: install"
     color: FBCA04
@@ -147,16 +114,6 @@ labels:
     color: FBCA04
     description: issue originates from external sources
 
-  - name: "type: localization"
-    oldname: localization
-    # include the old name to rename an existing label
-    color: FFFFF0
-    description: related to localization and translations
-
-  - name: "type: infrastructure"
-    color: ffdda8
-    description: improvements or additions to project infrastructure
-
   - name: "type: automation"
     color: fbca04
     description: issues for automation actions
@@ -164,6 +121,15 @@ labels:
   - name: "type: fix"
     color: 91ca55
     description: Iterations on existing features or infrastructure.
+
+  - name: "type: infrastructure"
+    color: ffdda8
+    description: improvements or additions to project infrastructure
+
+  - name: "type: localization"
+    oldname: localization
+    color: FFFFF0
+    description: related to localization and translations
 
   - name: "type: testing"
     color: fbca04
@@ -178,9 +144,17 @@ labels:
     color: d4c5f9
     description: Questions, queries, posers, proposals and info that requires discussion.
 
+  - name: "type: imgbot"
+    color: d4c5f9
+    description: imgbot automation.
+
   - name: "type: docs"
     color: fef2c0
     description: Related to documentation and information.
+
+  - name: "type: pages"
+    color: fef2c0
+    description: Related to GitHub pages documentation and information.
 
   - name: "type: enhancement"
     oldname: "Mod-enhancement"
@@ -254,6 +228,34 @@ labels:
     color: e6e6e6
     description: No action will be taken at this time
 
+  - name: "hacktoberfest"
+    color: ff9900
+    description: flag for entry into hacktoberfest
+
+  - name: "hacktoberfest-accepted"
+    color: ff9900
+    description: flag for stating PR is accepted as appropriate for hacktoberfest
+
+  - name: "good-first-issue"
+    color: AEF923
+    description: flag for inclusion into good-first-issues listing
+
+  - name: "contributions-welcome"
+    color: AEF923
+    description: flag for inclusion into contributions-welcome listing
+
+  - name: "beginner-friendly"
+    color: AEF923
+    description: flag for inclusion into beginner-friendly listing
+
+  - name: "invalid"
+    color: FFFF00
+    description: flagged as invalid
+
+  - name: "spam"
+    color: EB212E
+    description: spam flag
+
 # Milestones: define milestones for Issues and Pull Requests
 milestones:
   - title: 1.1.99.0-adoption
@@ -268,6 +270,6 @@ milestones:
     description: progress toward PARTS localization (only for parts, agencies - etc)
     state: open
 
-  - title: Localization - English (United States) <en-us.cfg>
-    description: progress toward English (United States) <en-us.cfg> localization
+  - title: Localization - English <en-us.cfg>
+    description: progress toward English<en-us.cfg> localization
     state: open
