--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbdocking.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbdocking.cfg
@@ -35,9 +35,9 @@ node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 	cost = 400
 	category = Coupling // Utility
 	subcategory = 0
-	title = Cargo Bay Docking Node
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = When you just aren't ready to let go forever...	there's a docking node.
+	title = #SCS-cbDocking-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbDocking-desc
 	tags = #autoLOC_500908 //#autoLOC_500908 = berth capture connect couple dock fasten join moor port socket utility
 
 	attachRules = 1,1,1,1,0
