--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbDockingJr.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbDockingJr.cfg
@@ -36,9 +36,10 @@ node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 	cost = 300
 	category = Coupling // Utility
 	subcategory = 0
-	title = Cargo Bay Docking Node Junior
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = When you just aren't ready to let go forever...\nthere's a docking node.
+
+	title = #SCS-cbDockingJr-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbDockingJr-desc
 	tags = #autoLOC_500908 //#autoLOC_500908 = berth capture connect couple dock fasten join moor port socket utility
 // 	tags = #autoLOC_501783   //#autoLOC_501783 = decouple
 
