--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple0625.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple0625.cfg
@@ -69,9 +69,9 @@ node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 	cost = 500
 	category = Payload // Utility
 	subcategory = 0
-	title = 0.625m Cargo Bay
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = A Bay.	For Cargo.	For really tiny kerbals.
+	title = #SCS-cbSimple0625-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbSimple0625-desc
 	tags = #autoLOC_500902 //#autoLOC_500902 = contain convey equipment freight hold hollow payload (stor transport utility
 		
 	attachRules = 1,0,1,1,1
