--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple125.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple125.cfg
@@ -63,10 +63,11 @@ PART
 	cost = 500
 	category = Payload // Utility
 	subcategory = 0
-	title = 1.25m Cargo Bay
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = A Bay.	For Cargo.
-	tags = #autoLOC_500902 //#autoLOC_500902 = contain convey equipment freight hold hollow payload (stor transport utility
+
+	title = #SCS-cbSimple125-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbSimple125-desc
+	tags = #autoLOC_500902 //contain convey equipment freight hold hollow payload (stor transport utility
 
 	attachRules = 1,0,1,1,1
 	mass = 0.15
