--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple1875.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple1875.cfg
@@ -57,9 +57,9 @@ PART
 	cost = 800
 	category = Payload // Utility
 	subcategory = 0
-	title = 1.875m Cargo Bay
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = A Bay.	For Cargo. \tA rather big one. 
+	title = #SCS-cbSimple1875-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbSimple1875-desc
 	tags = #autoLOC_500902 //#autoLOC_500902 = contain convey equipment freight hold hollow payload (stor transport utility
 	
 	attachRules = 1,0,1,1,1 //?
