--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple250.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple250.cfg
@@ -62,9 +62,9 @@ PART
 	cost = 500
 	category = Payload // Utility
 	subcategory = 0
-	title = 2.5m Cargo Bay
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = A Bay.	For Cargo.		Also includes integrated ladders.	For laddering. 
+	title = #SCS-cbSimple250-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbSimple250-desc
 	tags = #autoLOC_500902 //#autoLOC_500902 = contain convey equipment freight hold hollow payload (stor transport utility
 
 	attachRules = 1,0,1,1,1
