--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple375.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple375.cfg
@@ -57,9 +57,9 @@ PART
 	cost = 800
 	category = Payload // Utility
 	subcategory = 0
-	title = 3.75m Cargo Bay
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = A Bay.	For Cargo.		A rather big one. 
+	title = #SCS-cbSimple375-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbSimple375-desc
 	tags = #autoLOC_500902 //#autoLOC_500902 = contain convey equipment freight hold hollow payload (stor transport utility
 
 	attachRules = 1,0,1,1,1 // ??
