--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple500.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple500.cfg
@@ -62,9 +62,9 @@ PART
 	cost = 500
 	category = Payload // Utility
 	subcategory = 0
-	title = 5.0m Cargo Bay
-	manufacturer = #AACB_manufacturer // Axial Aerospace
-	description = A Bay.	For Cargo.		Also includes integrated ladders.	For laddering. 
+	title = #SCS-cbSimple500-titl
+	manufacturer = #AAL-Agency-titl
+	description = #SCS-cbSimple500-desc
 
 	attachRules = 1,0,1,1,1
 	mass = 0.35
