--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple250.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple250.cfg
@@ -1,3 +1,10 @@
+// .cfg v1.0.0.0
+// Simple Cargo Solutions (CARGO)
+// created: 24 Nov 2015
+// updated: 24 Oct 2022
+
+// this file: GPL-2.0 by zer0Kerbal
+
 PART
 {
 	name = cbSimple250
