--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
@@ -1,7 +1,9 @@
 // ConnectedLivingSpace.cfg v1.0.1.0
-// Simple Cargo Solutions by Axial Aerospace
+// Simple Cargo Solutions (CARGO)
 // created: 29 Mar 2020
 // updated: 19 Sep 2021
+
+// GPL-2.0 by zer0Kerbal
 
 // CLS config for Axial Aerospace Cargo Bays mini mod
 
@@ -28,6 +30,3 @@
 		passable = true
 	}
 }
-
-// GPLv2 BY
-// zer0Kerbal
