--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/FSanimateGeneric.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/FSanimateGeneric.cfg
@@ -1,5 +1,5 @@
 // FSanimateGeneric.cfg v1.0.0.0
-// SimpleCargoSolutions by AxialAerospace
+// Simple Cargo Solutions (CARGO)
 // created: 
 // updated: 19 Sept 2021
 
