--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/FSanimateGeneric.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/FSanimateGeneric.cfg
@@ -3,6 +3,8 @@
 // created: 
 // updated: 19 Sept 2021
 
+// GPL-2.0 BY zer0Kerbal
+
 @PART[cbSimple*]:HAS[@MODULE[ModuleAnimateGeneric]:HAS[@animationName[CBOpen]]]:NEEDS[AxialAerospace/SimpleCargoSolutions,Firespitter]:For[SimpleCargoSolutions]
 {
 	!MODULE[ModuleAnimateGeneric]:HAS[@animationName[CBOpen]] {}
@@ -18,6 +20,3 @@
 		EVArange = 10
 	}
 }
-
-// GPLv2 BY
-// zer0Kerbal
