--- a/GameData/AxialAerospace/SimpleCargoSolutions/Config/ghostparts.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Config/ghostparts.cfg
@@ -7,57 +7,9 @@
 
 // creates duplicate part to prevent save game issues because of a part name change
 
-+PART[hlwn-kraken*]:NEEDS[Halloween]:LAST[Halloween]
++PART[scs-*]:NEEDS[AxialAerospace/SimpleCargoSolutions]:LAST[SimpleCargoSolutions]
 {
-	@name ^= :hlwn-kraken:halloweenkraken:
-	!TechRequired = DELETE
-	!entryCost = DELETE
-	@category = -1
-	%TechHidden = True
-	%entryCost = 0
-	@title ^= :^:Kindly use new part numbers :
-	@description = This part has been depreciated, kindly use new part.
-}
-
-+PART[hlwn-kerbalkoffin]:NEEDS[Halloween]:LAST[Halloween]
-{
-	@name = kerbalkoffin
-	!TechRequired = DELETE
-	!entryCost = DELETE
-	@category = -1
-	%TechHidden = True
-	%entryCost = 0
-	@title ^= :^:Kindly use new part numbers :
-	@description = This part has been depreciated, kindly use new part.
-}
-
-+PART[hlwn-kerbaLamp]:NEEDS[Halloween]:LAST[Halloween]
-{
-	@name = kerbaLamp
-	!TechRequired = DELETE
-	!entryCost = DELETE
-	@category = -1
-	%TechHidden = True
-	%entryCost = 0
-	@title ^= :^:Kindly use new part numbers :
-	@description = This part has been depreciated, kindly use new part.
-}
-
-+PART[hlwn-fallenkerbonaut]:NEEDS[Halloween]:LAST[Halloween]
-{
-	@name = fallenkerbonaut
-	!TechRequired = DELETE
-	!entryCost = DELETE
-	@category = -1
-	%TechHidden = True
-	%entryCost = 0
-	@title ^= :^:Kindly use new part numbers :
-	@description = This part has been depreciated, kindly use new part.
-}
-
-+PART[hlwn-strutconnector,hlwn-fuelline,hlwn-handrail-?,hlwn-candle-?]:NEEDS[Halloween]:LAST[Halloween]
-{
-	@name ^= :hlwn:halloween:
+	@name ^= :scs-:cb:
 	!TechRequired = DELETE
 	!entryCost = DELETE
 	@category = -1
