--- a/GameData/AxialAerospace/SimpleCargoSolutions/Config/SimpleCargoSolutions.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Config/SimpleCargoSolutions.cfg
@@ -7,9 +7,9 @@
 
 // updates parts with localization strings
 
-@PART[hlwn-*]:NEEDS[Halloween]:FOR[Halloween]
+@PART[scs-*]:NEEDS[AxialAerospace/SimpleCargoSolutions]:FOR[SimpleCargoSolutions]
 {
-	tmp01 = #HLWN-tags
+	tmp01 = #SCS-tags
 	@tags = #$tags$ $tmp01$
 
 	!tmp01 = DELETE
