--- a/GameData/AxialAerospace/SimpleCargoSolutions/Localization/en-us.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Localization/en-us.cfg
@@ -16,8 +16,8 @@ Localization
 		#SCS-tags = scs cargo solution simple
 
 	// Parts
-		#SCS-cbDocking-titl = Cargo Bay Docking Node
-		#SCS-cbDocking-desc = When you just aren't ready to let go forever...	there's a docking node.
+		#SCS-Docking-titl = Cargo Bay Docking Node
+		#SCS-Docking-desc = When you just aren't ready to let go forever...	there's a docking node.
 
 		#SCS-cbDockingJr-titl = Cargo Bay Docking Node Junior
 		#SCS-cbDockingJr-desc = When you just aren't ready to let go forever...\nthere's a docking node.
