--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbDockingJr.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbDockingJr.cfg
@@ -13,7 +13,7 @@ PART
 
 	MODEL
 	{
-		model = AxialAerospace/SimpleCargo/Assets/cbdockingjunior
+		model = AxialAerospace/SimpleCargoSolutions/Assets/cbdockingjunior
 		rotation = 180.0, 0, 0.0
 		position = 0.0, -0.05, 0.0
 	}
@@ -47,7 +47,7 @@ node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 	title = #SCS-cbDockingJr-titl
 	manufacturer = #AAL-Agency-titl
 	description = #SCS-cbDockingJr-desc
-	tags = #autoLOC_500908 //#autoLOC_500908 = berth capture connect couple dock fasten join moor port socket utility
+	tags = #autoLOC_500908 // berth capture connect couple dock fasten join moor port socket utility
 // 	tags = #autoLOC_501783   //#autoLOC_501783 = decouple
 
 	attachRules = 1,1,1,1,0
