--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
@@ -1,7 +1,7 @@
-// ConnectedLivingSpace.cfg v1.0.1.0
+// ConnectedLivingSpace.cfg v1.1.0.0
 // Simple Cargo Solutions (CARGO)
 // created: 29 Mar 2020
-// updated: 19 Sep 2021
+// updated: 24 Oct 2022
 
 // GPL-2.0 by zer0Kerbal
 
@@ -12,17 +12,7 @@
 // by [Technologicat]https://forum.kerbalspaceprogram.com/index.php?/profile/153765-technologicat/
 
 // 1.25M Cargo Bay
-@PART[cbsimple125]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
-{
-	MODULE
-	{
-		name = ModuleConnectedLivingSpace
-		passable = true
-	}
-}
-
-// 2.5M Cargo Bay
-@PART[cbsimple250]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
+@PART[scs-simple???]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
 {
 	MODULE
 	{
