--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/FSanimateGeneric.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/FSanimateGeneric.cfg
@@ -5,7 +5,7 @@
 
 // GPL-2.0 BY zer0Kerbal
 
-@PART[cbSimple*]:HAS[@MODULE[ModuleAnimateGeneric]:HAS[@animationName[CBOpen]]]:NEEDS[AxialAerospace/SimpleCargoSolutions,Firespitter]:For[SimpleCargoSolutions]
+@PART[scs-Simple*]:HAS[@MODULE[ModuleAnimateGeneric]:HAS[@animationName[CBOpen]]]:NEEDS[AxialAerospace/SimpleCargoSolutions,Firespitter]:For[SimpleCargoSolutions]
 {
 	!MODULE[ModuleAnimateGeneric]:HAS[@animationName[CBOpen]] {}
 	MODULE
