--- a/GameData/AxialAerospace/SimpleCargoSolutions/Config/SimpleCargoSolutions.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Config/SimpleCargoSolutions.cfg
@@ -11,6 +11,12 @@
 {
 	tmp01 = #SCS-tags
 	@tags = #$tags$ $tmp01$
+	!tmp01 = DELETE
+}
 
+@PART[scs-Dock*]:NEEDS[AxialAerospace/SimpleCargoSolutions]:FOR[SimpleCargoSolutions]
+{
+	tmp01 = #autoLOC_501783 // decouple
+	@tags = #$tags$ $tmp01$
 	!tmp01 = DELETE
 }
