--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple250.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/cbSimple250.cfg
@@ -22,7 +22,7 @@ PART
 	NODE
 	{
 		name = top2
-		transform = nodeTop2// Or whatever your transform name is.
+		transform = nodeTop2
 		size = 0	
 		method = FIXED_JOINT	
 	}
@@ -30,7 +30,7 @@ PART
 	NODE
 	{
 		name = bottom2
-		transform = nodeBot2// Or whatever your transform name is.
+		transform = nodeBot2
 		size = 0	
 		method = FIXED_JOINT	
 	}
@@ -38,7 +38,7 @@ PART
 	NODE
 	{
 		name = bay
-		transform = nodeBay// Or whatever your transform name is.
+		transform = nodeBay
 		size = 0 
 		method = FIXED_JOINT	
 	}
@@ -46,7 +46,7 @@ PART
 	NODE
 	{
 		name = top
-		transform = nodeTop// Or whatever your transform name is.
+		transform = nodeTop
 		size = 1	
 		method = FIXED_JOINT	
 	}
@@ -54,7 +54,7 @@ PART
 	NODE
 	{
 		name = bottom
-		transform = nodeBot// Or whatever your transform name is.
+		transform = nodeBot
 		size = 1	
 		method = FIXED_JOINT	
 	}
