--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
@@ -12,7 +12,7 @@
 // by [Technologicat]https://forum.kerbalspaceprogram.com/index.php?/profile/153765-technologicat/
 
 // 1.25M Cargo Bay
-@PART[scs-simple???]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
+@PART[scs-Simple???]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
 {
 	MODULE
 	{
