--- a/GameData/AxialAerospace/SimpleCargoSolutions/Localization/en-us.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Localization/en-us.cfg
@@ -19,28 +19,28 @@ Localization
 		#SCS-Docking-titl = Cargo Bay Docking Node
 		#SCS-Docking-desc = When you just aren't ready to let go forever...	there's a docking node.
 
-		#SCS-cbDockingJr-titl = Cargo Bay Docking Node Junior
-		#SCS-cbDockingJr-desc = When you just aren't ready to let go forever...\nthere's a docking node.
+		#SCS-DockingJr-titl = Cargo Bay Docking Node Junior
+		#SCS-DockingJr-desc = When you just aren't ready to let go forever...\nthere's a docking node.
 
-		#SCS-cbSimple0625-titl = 0.625m Cargo Bay
-		#SCS-cbSimple0625-desc = A Bay.	For Cargo.	For really tiny kerbals.
+		#SCS-Simple0625-titl = 0.625m Cargo Bay
+		#SCS-Simple0625-desc = A Bay.\nFor Cargo.\nFor really tiny kerbals.
 
-		#SCS-cbSimple125-titl = 1.25m Cargo Bay
-		#SCS-cbSimple125-desc = A Bay.	For Cargo.
+		#SCS-Simple125-titl = 1.25m Cargo Bay
+		#SCS-Simple125-desc = A Bay.\nFor Cargo.
 
-		#SCS-cbSimple1875-titl = 1.875m Cargo Bay
-		#SCS-cbSimple1875-desc = A Bay.	For Cargo. \tA rather big one.
+		#SCS-Simple1875-titl = 1.875m Cargo Bay
+		#SCS-Simple1875-desc = A Bay.\nFor Cargo.\nA rather big one.
 
-		#SCS-cbSimple250-titl = 2.5m Cargo Bay
-		#SCS-cbSimple250-desc = A Bay.	For Cargo.		Also includes integrated ladders.	For laddering.
+		#SCS-Simple250-titl = 2.5m Cargo Bay
+		#SCS-Simple250-desc = A Bay.\nFor Cargo.\nAlso includes integrated ladders.\nFor laddering.
 
-		#SCS-cbSimple375-titl = 3.75m Cargo Bay
-		#SCS-cbSimple375-desc = A Bay.	For Cargo.		A rather big one.
+		#SCS-Simple375-titl = 3.75m Cargo Bay
+		#SCS-Simple375-desc = A Bay.\nFor Cargo.\nA rather big one.
 
-		#SCS-cbSimple500-titl = 5.0m Cargo Bay
-		#SCS-cbSimple500-desc = A Bay.	For Cargo.		Also includes integrated ladders.	For laddering.
+		#SCS-Simple500-titl = 5.0m Cargo Bay
+		#SCS-Simple500-desc = A Bay.\nFor Cargo.\nAlso includes integrated ladders.\nFor laddering.
 
-		#SCS-cbSimple500t-titl = 5.0m tall Cargo Bay
-		#SCS-cbSimple500t-desc = A Bay.	For Cargo.		Also includes integrated ladders.	For laddering.
+		#SCS-Simple500t-titl = 5.0m tall Cargo Bay
+		#SCS-Simple500t-desc = A Bay.\nFor Cargo.\nAlso includes integrated ladders.\nFor laddering.
 	}
 }
