--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-DockingJr.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-DockingJr.cfg
@@ -50,13 +50,13 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = #SCS-cbDockingJr-titl
+	title = #SCS-DockingJr-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-cbDockingJr-desc
+	description = #SCS-DockingJr-desc
 	tags = #autoLOC_500908 // berth capture connect couple dock fasten join moor port socket utility
 
 	mass = 0.02
-	fuelCrossFeed = FALSE
+	// fuelCrossFeed = FALSE
 	explosionPotential = 0.5
 
 	dragModelType = default
