--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple0625.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple0625.cfg
@@ -79,9 +79,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-cbSimple0625-titl
+	title = #SCS-Simple0625-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-cbSimple0625-desc
+	description = #SCS-Simple0625-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 		
 	mass = 0.15
