--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple125.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple125.cfg
@@ -72,9 +72,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-cbSimple125-titl
+	title = #SCS-Simple125-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-cbSimple125-desc
+	description = #SCS-Simple125-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 0.15
