--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple1875.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple1875.cfg
@@ -68,9 +68,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-cbSimple1875-titl
+	title = #SCS-Simple1875-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-cbSimple1875-desc
+	description = #SCS-Simple1875-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 	
 	mass = 4
