--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple250.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple250.cfg
@@ -72,9 +72,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-cbSimple250-titl
+	title = #SCS-Simple250-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-cbSimple250-desc
+	description = #SCS-Simple250-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 0.35
