--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple375.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple375.cfg
@@ -68,9 +68,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-cbSimple375-titl
+	title = #SCS-Simple375-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-cbSimple375-desc
+	description = #SCS-Simple375-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 4
