--- a/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Compatability/ConnectedLivingSpace.cfg
@@ -1,4 +1,4 @@
-// ConnectedLivingSpace.cfg v1.1.0.0
+// ConnectedLivingSpace.cfg v1.1.0.1
 // Simple Cargo Solutions (CARGO)
 // created: 29 Mar 2020
 // updated: 24 Oct 2022
@@ -12,11 +12,11 @@
 // by [Technologicat]https://forum.kerbalspaceprogram.com/index.php?/profile/153765-technologicat/
 
 // 1.25M Cargo Bay
-@PART[scs-Simple???]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
+@PART[scs-Simple*]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[AxialAerospace/SimpleCargoSolutions,ConnectedLivingSpace]:For[SimpleCargoSolutions]
 {
 	MODULE
 	{
 		name = ModuleConnectedLivingSpace
-		passable = true
+		passable = True
 	}
 }
