--- a/GameData/AxialAerospace/SimpleCargoSolutions/Config/ghostparts.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Config/ghostparts.cfg
@@ -16,5 +16,6 @@
 	%TechHidden = True
 	%entryCost = 0
 	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
 	@description = This part has been depreciated, kindly use new part.
 }
