--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple0625.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple0625.cfg
@@ -1,7 +1,7 @@
-// scs-Simple0625.cfg v1.0.0.0
+// scs-Simple0625.cfg v1.0.1.0
 // Simple Cargo Solutions (CARGO)
 // created: 24 Nov 2015
-// updated: 24 Oct 2022
+// updated: 31 Jan 2023
 
 // this file: GPL-2.0 by zer0Kerbal
 
@@ -21,6 +21,7 @@ PART
 	rescaleFactor = 1.0
 	bulkheadProfiles = size0
 
+	attachRules = 1,0,1,1,1
 	NODE
 	{
 		name = top2
@@ -71,7 +72,6 @@ PART
 	//	node_stack_bottom2 = 0.0, -0.9175, 0.0, 0.0, 1.0, 0.0, 0	
 	//	node_stack_top = 0.0, 0.9375, 0.0, 0.0, 1.0, 0.0, 1
 	//	node_stack_bottom = 0.0, -0.9375, 0.0, 0.0, -1.0, 0.0, 1
-	attachRules = 1,0,1,1,1
 
 	TechRequired = survivability
 	entryCost = 2500
@@ -79,9 +79,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-Simple0625-titl
+	title = #SCS-bay-0625-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-Simple0625-desc
+	description = #SCS-bay-0625-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 		
 	mass = 0.15
@@ -90,12 +90,12 @@ PART
 
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
+	minimum_drag = 0.3
+	angularDrag = 2
 	
-	crashTolerance = 30
-	breakingForce = 50
-	breakingTorque = 50
+	crashTolerance = 14
+	breakingForce = 150
+	breakingTorque = 150
 	
 	maxTemp = 2900
 	emissiveConstant = 0.95
@@ -105,12 +105,12 @@ PART
 	MODULE
 	{
 		name = ModuleToggleCrossfeed
-		crossfeedStatus = true
-		toggleEditor = true
-		toggleFlight = true
+		crossfeedStatus = True
+		toggleEditor = True
+		toggleFlight = True
 		techRequired = fuelSystems
-		eventPropagatesInEditor = true
-		eventPropagatesInFlight = false
+		eventPropagatesInEditor = True
+		eventPropagatesInFlight = False
 		toggleText = #autoLOC_236032  // Toggle Crossfeed
 		enableText = #autoLOC_236028  // Enable Crossfeed
 		disableText = #autoLOC_236030 // Disable Crossfeed
@@ -127,10 +127,10 @@ PART
 		eventAvailableFlight = True
 		eventAvailableEVA = True
 		evaDistance = 10
-		allowDeployLimit = true
-		revClampDirection = false
-		revClampSpeed = true
-		revClampPercent = true
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 	}
 
 	MODULE
@@ -138,7 +138,7 @@ PART
 		name = ModuleCargoBay
 		DeployModuleIndex = 0
 		closedPosition = 0
-		lookupRadius = 1
+		lookupRadius = 0.45 // 1
 		partTypeName = Cargo bay
 		nodeOuterForeID = top
 		nodeOuterAftID = bottom
@@ -160,16 +160,6 @@ PART
 		deflectionLiftCoeff = 0.35
 		dragAtMaxAoA = 0.2
 		dragAtMinAoA = 0.1
-	}
-
-	MODULE
-	{
-		name = TweakScale
-		type = Stack
-		freeScale = True
-		defaultScale = 0.625
-		scaleFactors = 0.3125, 0.625, 1.25, 1.875, 2.5, 3.75, 5.0, 7.5, 10, 15, 20
-		scaleNames = .312m, 0.625m, 1.25m, 1.875m, 2.5m, 3.75m, 5m, 7.5m, 10m, 15m, 20m
 	}
 
 	DRAG_CUBE
