--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple1875.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple1875.cfg
@@ -1,7 +1,7 @@
-// scs-Simple1875.cfg v1.0.0.0
+// scs-Simple1875.cfg v1.0.1.0
 // Simple Cargo Solutions (CARGO)
 // created: 24 Nov 2015
-// updated: 24 Oct 2022
+// updated: 31 Jan 2023
 
 // this file: GPL-2.0 by zer0Kerbal
 
@@ -21,6 +21,7 @@ PART
 	rescaleFactor = 0.5
 	bulkheadProfiles = size1p5
 
+	attachRules = 1,0,1,1,1
 	NODE
 	{
 		name = top2
@@ -60,7 +61,6 @@ PART
 		size = 1	
 		method = FIXED_JOINT	
 	}
-	attachRules = 1,0,1,1,1
 
 	TechRequired = commandModules
 	entryCost = 4000
@@ -68,9 +68,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-Simple1875-titl
+	title = #SCS-bay-1875-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-Simple1875-desc
+	description = #SCS-bay-1875-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 	
 	mass = 4
@@ -79,27 +79,27 @@ PART
 
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
+	minimum_drag = 0.3
+	angularDrag = 2
 
-	crashTolerance = 30
-	breakingForce = 50
-	breakingTorque = 50
+	crashTolerance = 14
+	breakingForce = 150
+	breakingTorque = 150
 	
-	maxTemp = 2400
-	emissiveConstant = 0.8
-	thermalMassModifier = 4.0 
+	maxTemp = 2900
+	emissiveConstant = 0.95
+	thermalMassModifier = 5.0
 	heatConductivity = 0.04
 
 	MODULE
 	{
 		name = ModuleToggleCrossfeed
-		crossfeedStatus = true
-		toggleEditor = true
-		toggleFlight = true
+		crossfeedStatus = True
+		toggleEditor = True
+		toggleFlight = True
 		techRequired = fuelSystems
-		eventPropagatesInEditor = true
-		eventPropagatesInFlight = false
+		eventPropagatesInEditor = True
+		eventPropagatesInFlight = False
 		toggleText = #autoLOC_236032  // Toggle Crossfeed
 		enableText = #autoLOC_236028  // Enable Crossfeed
 		disableText = #autoLOC_236030 // Disable Crossfeed
@@ -116,10 +116,10 @@ PART
 		eventAvailableFlight = True
 		eventAvailableEVA = True
 		evaDistance = 10
-		allowDeployLimit = true
-		revClampDirection = false
-		revClampSpeed = true
-		revClampPercent = true
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 	}
 
 	MODULE
@@ -149,16 +149,6 @@ PART
 		deflectionLiftCoeff = 0.35
 		dragAtMaxAoA = 0.2
 		dragAtMinAoA = 0.1
-	}
-
-	MODULE
-	{
-		name = TweakScale
-		type = Stack
-		freeScale = True
-		defaultScale = 3.75
-		scaleFactors = 0.3125, 0.625, 1.25, 1.875, 2.5, 3.75, 5.0, 7.5, 10, 15, 20
-		scaleNames = .312m, 0.625m, 1.25m, 1.875m, 2.5m, 3.75m, 5m, 7.5m, 10m, 15m, 20m
 	}
 
 	DRAG_CUBE
