--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple500t.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Simple500t.cfg
@@ -1,7 +1,7 @@
-// scs-Simple500t.cfg v1.0.0.0
+// scs-Simple500t.cfg v1.0.1.0
 // Simple Cargo Solutions (CARGO)
 // created: 24 Nov 2015
-// updated: 24 Oct 2022
+// updated: 31 Jan 2023
 
 // this file: GPL-2.0 by zer0Kerbal
 
@@ -21,6 +21,7 @@ PART
 	rescaleFactor = 1
 	bulkheadProfiles = size4
 
+	attachRules = 1,0,1,1,1
 	NODE
 	{
 		name = top2
@@ -28,7 +29,6 @@ PART
 		size = 0	
 		method = FIXED_JOINT	
 	}
-
 	NODE
 	{
 		name = bottom2
@@ -36,7 +36,6 @@ PART
 		size = 0	
 		method = FIXED_JOINT	
 	}
-
 	NODE
 	{
 		name = bay
@@ -44,7 +43,6 @@ PART
 		size = 0 
 		method = FIXED_JOINT	
 	}
-
 	NODE
 	{
 		name = top
@@ -52,7 +50,6 @@ PART
 		size = 1	
 		method = FIXED_JOINT	
 	}
-
 	NODE
 	{
 		name = bottom
@@ -64,7 +61,6 @@ PART
 	//	node_stack_bottom2 = 0.0, -0.9175, 0.0, 0.0, 1.0, 0.0, 0	
 	//	node_stack_top = 0.0, 0.9375, 0.0, 0.0, 1.0, 0.0, 1
 	//	node_stack_bottom = 0.0, -0.9375, 0.0, 0.0, -1.0, 0.0, 1
-	attachRules = 1,0,1,1,1
 
 	TechRequired = commandModules
 	entryCost = 2500
@@ -72,9 +68,9 @@ PART
 	category = Payload
 	subcategory = 0
 
-	title = #SCS-Simple500t-titl
+	title = #SCS-bay-500t-titl
 	manufacturer = #AAL-Agency-titl
-	description = #SCS-Simple500t-desc
+	description = #SCS-bay-500t-desc
 	tags = #autoLOC_500902 // contain convey equipment freight hold hollow payload (stor transport utility
 
 	mass = 0.35
@@ -83,27 +79,27 @@ PART
 
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.2
-	angularDrag = 1
+	minimum_drag = 0.3
+	angularDrag = 2
 
-	crashTolerance = 30
-	breakingForce = 50
-	breakingTorque = 50
+	crashTolerance = 14
+	breakingForce = 150
+	breakingTorque = 150
 
-	maxTemp = 2400
-	emissiveConstant = 0.8
-	thermalMassModifier = 4.0 
+	maxTemp = 2900
+	emissiveConstant = 0.95
+	thermalMassModifier = 5.0
 	heatConductivity = 0.04
 
 	MODULE
 	{
 		name = ModuleToggleCrossfeed
-		crossfeedStatus = true
-		toggleEditor = true
-		toggleFlight = true
+		crossfeedStatus = True
+		toggleEditor = True
+		toggleFlight = True
 		techRequired = fuelSystems
-		eventPropagatesInEditor = true
-		eventPropagatesInFlight = false
+		eventPropagatesInEditor = True
+		eventPropagatesInFlight = False
 		toggleText = #autoLOC_236032  // Toggle Crossfeed
 		enableText = #autoLOC_236028  // Enable Crossfeed
 		disableText = #autoLOC_236030 // Disable Crossfeed
@@ -113,17 +109,17 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = CBOpen
+		actionGUIName = #autoLOC_502077 // Toggle Bay Doors
 		startEventGUIName = #autoLOC_502069 // Open
 		endEventGUIName = #autoLOC_502051 // Close
-		actionGUIName = #autoLOC_502077 // Toggle Bay Doors
 		eventAvailableEditor = True
 		eventAvailableFlight = True
 		eventAvailableEVA = True
 		evaDistance = 10
-		allowDeployLimit = true
-		revClampDirection = false
-		revClampSpeed = true
-		revClampPercent = true
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 	}
 
 	MODULE
@@ -131,7 +127,7 @@ PART
 		name = ModuleCargoBay
 		DeployModuleIndex = 0
 		closedPosition = 0
-		lookupRadius = 1
+		lookupRadius = 3.6
 		partTypeName = Cargo bay
 		nodeOuterForeID = top
 		nodeOuterAftID = bottom
@@ -157,14 +153,10 @@ PART
 
 	MODULE
 	{
-		name = TweakScale
-		type = Stack
-		freeScale = True
-		defaultScale = 5.0
-		scaleFactors = 0.3125, 0.625, 1.25, 1.875, 2.5, 3.75, 5.0, 7.5, 10, 15, 20
-		scaleNames = .312m, 0.625m, 1.25m, 1.875m, 2.5m, 3.75m, 5m, 7.5m, 10m, 15m, 20m
+		name = ModuleCargoPart	
+		stackableQuantity = 1
+		packedVolume = -1
 	}
-
 
 	DRAG_CUBE
 	{
